creamos un footer

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 <body>
     <h1>Bienvenido a Github</h1>
     <h2>primer commit</h2>
-    <h3>segundo commit
-        
-    </h3>
+    <h3>segundo commit    </h3>
+
+<footer><h4>
+    esto es un footer
+</h4></footer>    
 </body>
 </html>
