--- a/index.html
+++ b/index.html
@@ -12,5 +12,11 @@
     <h3>segundo commit
         
     </h3>
+
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, maxime. Amet facere reiciendis mollitia! Et assumenda aliquam error illo rem atque expedita ipsam temporibus ipsum, totam maxime eius repellat praesentium?</p>
+        <img src="" alt="otro gato">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam esse ad, saepe nam vero a quibusdam ex? Asperiores consequuntur rerum tenetur, quo recusandae est minima eius perspiciatis soluta doloribus sequi.</p>
+    </div>
 </body>
 </html>
